	cleans up the code.
	    old syntax:    set datafile binary array=128x128
	    new syntax:    set datafile binary array=(128,128)
	The old syntax is still accepted, but is now deprecated
	Bug #2378535

	* docs/gnuplot.doc demo/image.dem demo/rgbalpha.dem demo/image2.dem
	demo/circles.dem: Update docs and demos to use the new syntax.

2008-12-09  Ethan Merritt  <merritt@u.washington.edu>

	* src/color.h src/gadgets.c src/gadgets.h src/graphics.c src/misc.c
	src/misc.h src/plot2d.c src/save.c src/set.c src/show.c src/term_api.h
	src/unset.c docs/gnuplot.doc:

	Upgrade the fillstyle border field to take a color specifier rather than
	a simple line type.
	Bug #2345832

2008-12-07  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (do_key_sample do_rectangle): Fill style EMPTY
	should be no fill at all, rather than fill with background.
	Also, the first empty box in a boxplot was being drawn in the wrong
	color.
	Bug #2345832

2008-12-03  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (plot_option_binary_format): Code cleanup.

2008-12-02  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (plot_option_binary plot_option_array):
	Setting default suboptions for binary file input was documented, but
	never implemented.  Now it is.
	    set datafile binary record=5x5 format="%double"
	However, I believe that the syntax should be changed everywhere to 
	    set datafile binary record={something_parsable} format="%double"
	Bug #2378535

2008-11-28  Ethan Merritt  <merritt@u.washington.edu>

	* src/tables.c (lookup_table_nth): Leading substring match is all very
	well, but return an exact match if one exists.  This fixes color lookup
	for e.g.  grey/grey10/grey100.

	* src/graphics.c (boundary) src/graph3d.c (boundary3d):
	`set {lrbt}margin at screen FRAC` should behave consistently for all
	four plot borders.  Ignore the current value of `set origin`.
	Bug #2345000

	* term/svg.trm: Force stroke to match fill color in pointtype 5.
