@@ -29,7 +29,7 @@ New features, changes and fixes since gnuplot version 4.2
 * NEW terminal dpu414 - Seiko DPU-414 thermal printer
 * NEW command 'evaluate' executes commands from a string variable
 * NEW z-axis tic labels can be colored by Z value
-* NEW command 'set view equal_axes' forces x and y axes in 3D plot to same scale
+* NEW command 'set view equal {xy|xyz}' forces axes in a 3D plot to the same scale
 * FIX remove the limit of 64 characters read as string data from a data file
 * FIX remainder of command line is not lost after a "load" command
 * FIX more complete support for locale internationalization, UTF-8 encoding
@@ -40,6 +40,7 @@ New features, changes and fixes since gnuplot version 4.2
 * FIX 2nd colour in the colour box for negative palette in postscript
 * FIX interpolatation for pm3d surfaces given by both z and colour coordinates
 * FIX 'set datafile binary format=...' was documented, but not implemented
+* CHANGE syntax of 'set datafile binary' array= and record= options
 * CHANGE 'reset' does not affect locale, encoding, decimalsign settings
 * CHANGE 'set key textcolor rgb variable' will use plot colors for key entries
 * CHANGE Remove obsolete IRIS4D terminal type
